2006-06-13  Sven de Marothy  <sven@physto.se>

	* gnu/java/awt/peer/gtk/CairoSurface.java
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoSurface.c
	(create): Use stride in ints.

2006-06-13  Keith Seitz  <keiths@redhat.com>

	From Kyle Galloway  <kgallowa@redhat.com>:
	* gnu/classpath/jdwp/event/ClassUnloadEvent.java: New file.

2006-06-13  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicSliderUI.java
	(calculateThumbSize): Removed unnecessary code,
	(calculateThumbLocation): Shift position by one,
	(calculateTickRect): Shift position by one when ticks are displayed,
	(calculateLabelRect): Calculate rect differently according to whether
	or not the labels are visible,
	(paintTrack): Shift track down one pixel.

2006-06-13  Lillian Angel  <langel@redhat.com>

	* java/awt/image/PixelGrabber.java
	(PixelGrabber): Removed check to throw exception. JDK does
	not do this.
	(startGrabbing): Removed line to print stacktrace. 

2006-06-13  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java (drawImage): Don't
	allocate unused AffineTransform. Add comment about conversion to
	BufferedImage.
	* gnu/java/awt/peer/gtk/ComponentGraphics.java (drawImage):
	Recognize identity transform as "easy". Always convert to
	BufferedImage before calling super.

2006-06-13  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(getGraphics): Translate child graphics correctly.
	(dispatchEvent): Only dispatch event if it hasn't been consumed
	yet by the global dispatcher.
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	Added some API docs.
	(PopupHelper.mousePressed): Consume the event after closing
	opened menus.

2006-06-13  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicCheckBoxUI.java: Source code formatting 
	changes only,
	* javax/swing/plaf/basic/BasicComboBoxUI.java: Likewise,
	* javax/swing/plaf/basic/BasicComboPopup.java: Likewise,