@@ -1,3 +1,13 @@
+2006-06-13  Keith Seitz  <keiths@redhat.com>
+
+	From Kyle Galloway  <kgallowa@redhat.com>:
+	* gnu/classpath/jdwp/event/filters/ExceptionOnlyFilter.java
+	(ExceptionOnlyFilter): Allow null refId.
+
+	* gnu/classpath/jdwp/event/BreakpointEvent.java: Added _instance for
+	compatibility with filters.
+	(getParameter): Modified to allow access to above. 
+
 2006-06-13  Sven de Marothy  <sven@physto.se>
 
 	* gnu/java/awt/peer/gtk/CairoSurface.java
